@@ -10,7 +10,7 @@
     <tr>
       <td align="left"><a href="./idl.html">Previous<a></td>
       <td align="center"><img width="4%" height="5%" src="./images/images.png"/></td>
-      <td align="right"></td>
+      <td align="right"><a href="./dds4ccm.html">Next<a></td>
     </tr>
   </table>
   <hr />
@@ -18,9 +18,9 @@
   <h1>Executors</h1>
   <p>
     Once the IDL files are created, the business logic for the components should
-    implemented. Since components can be complex, we can use the IDL compiler to
-    create empty executor files. This part of the tutorial explains how this can
-    be done.
+    be implemented. Since components can be complex, we can use the IDL compiler
+    to create empty executor files. This part of the tutorial explains how this
+    can be done.
   </p>
 
   <h2>Controller</h2>
@@ -97,7 +97,7 @@
     <tr>
       <td align="left"><a href="./idl.html">Previous<a></td>
       <td align="center"><img width="4%" height="5%" src="./images/images.png"/></td>
-      <td align="right"></td>
+      <td align="right"><a href="./dds4ccm.html">Next<a></td>
     </tr>
   </table>
 </body>
