@@ -21,11 +21,6 @@
     combination with a CCM component.<br/>
   </p>
 
-  <p>
-    TODO: <b><i>short explanation of the DDS4CCM connector.</i></b>
-    TODO: <b><i>short explanation of ports/mirrorports.</i></b>
-  </p>
-
   <h2>System</h2>
   <p>
     The system consists of three components:
