@@ -107,7 +107,7 @@
     &nbsp;&nbsp;&nbsp;&nbsp;<b>attribute unsigned</b> <font color="red">short</font> max_x;<br/>
     &nbsp;&nbsp;&nbsp;&nbsp;<b>attribute unsigned</b> <font color="red">short</font> max_y;<br/>
     &nbsp;&nbsp;&nbsp;&nbsp;<b>attribute unsigned</b> <font color="red">short</font> max_size;<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;<b>attribute</b><font color="red">boolean</font> resize_shape;<br/>
+    &nbsp;&nbsp;&nbsp;&nbsp;<b>attribute</b> <font color="red">boolean</font> resize_shape;<br/>
     &nbsp;&nbsp;};<br/>};<br/>
     </code>
   </p>
